--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,22 @@
     <artifactId>it-interview</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>it-interview Maven Webapp</name>
+    <name>interview.com.ua website</name>
     <url>http://interview.com.ua/</url>
+    <inceptionYear>2013</inceptionYear>
+    <issueManagement>
+        <url>https://github.com/interview-com-ua/website/issues</url>
+    </issueManagement>
+    <scm>
+        <connection>https://github.com/interview-com-ua/website.git</connection>
+        <developerConnection>https://github.com/interview-com-ua/website.git</developerConnection>
+        <url>https://github.com/interview-com-ua/website</url>
+    </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk>1.6</jdk>
+        <sonar.language>java</sonar.language>
     </properties>
 
     <dependencies>
