--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,6 +1,5 @@
-driver.class=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:file:./db/it-interview;shutdown=true;sql.syntax_pgs=true
-user=sa
-password=
-dialect=org.hibernate.dialect.HSQLDialect
-show.sql=false
+database.driverClassName=org.hsqldb.jdbcDriver
+database.url=jdbc:hsqldb:file:${db.dir}/it-interview;shutdown=true;sql.syntax_pgs=true;ifexists=true
+database.dialect=hsqldb
+database.userName=sa
+database.password=
