--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
             <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
+	    <dependency>
+	      <groupId>org.easymock</groupId>
+	      <artifactId>easymock</artifactId>
+	      <version>3.0</version>
+	      <scope>test</scope>
+	    </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
