--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
         <spring.version>3.1.2.RELEASE</spring.version>
     </properties>
 
-    <dependencies>
+    <dependencies>    	
     	<dependency>
     		<groupId>log4j</groupId>
     		<artifactId>log4j</artifactId>
@@ -155,6 +155,22 @@
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
