Issue #63: Attached selenium chrome web driver. Created infrastructure

--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,17 @@
             <artifactId>gag-annotations</artifactId>
             <version>1.0.1</version>
         </dependency>
+
+       <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-server</artifactId>
+            <version>2.28.0</version>
+        </dependency>
+       <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.28.0</version>
+        </dependency>	        
     </dependencies>
     <build>
         <finalName>it-interview</finalName>
