--- a/pom.xml
+++ b/pom.xml
@@ -1,92 +1,92 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>ua.com.itinterview</groupId>
-    <artifactId>it-interview</artifactId>
-    <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>interview.com.ua website</name>
-    <url>http://interview.com.ua/</url>
-    <inceptionYear>2013</inceptionYear>
-    <issueManagement>
-        <url>https://github.com/interview-com-ua/website/issues</url>
-    </issueManagement>
-    <scm>
-        <connection>https://github.com/interview-com-ua/website.git</connection>
-        <developerConnection>https://github.com/interview-com-ua/website.git</developerConnection>
-        <url>https://github.com/interview-com-ua/website</url>
-    </scm>
-    <developers>
-        <developer>
-            <name>Чирков Владимир Валериевич</name>
-            <email>voch83@mail.ru</email>
-        </developer>
-        <developer>
-            <name>Прутян Владимир Владимирович</name>
-            <email>vladprut@bigmir.net</email>
-        </developer>
-        <developer>
-            <name>Новокшонов Евгений Анатольевич</name>
-            <email>dzmk@i.ua</email>
-        </developer>
-        <developer>
-            <name>Novokshonov Oleksii</name>
-            <email>oleksii.novokshonov@gmail.com</email>
-        </developer>
-        <developer>
-            <name>Мосолов Артем Юрійович</name>
-            <email>kle0n@mail.ru</email>
-        </developer>
-        <developer>
-            <name>Педич Максим Михайлович</name>
-            <email>maximpedich@gmail.com</email>
-        </developer>
-        <developer>
-            <name>Романiв Андрій Володимирович</name>
-            <email>twentyyears@i.ua</email>
-        </developer>
-        <developer>
-            <name>Вольский Дмитрий Дмитриевич</name>
-            <email>skiman@i.ua</email>
-        </developer>
-        <developer>
-            <name>Бутолин Дмитрий Геннадьевич</name>
-            <email>djemen@gmail.com</email>
-        </developer>
-        <developer>
-            <name>Andrey Stasyuk</name>
-            <email>shmishleniy@gmail.com</email>
-        </developer>
-        <developer>
-            <name>Морозов Пётр Владимирович</name>
-            <email>petia.morozov@gmail.com</email>
-        </developer>
-        <developer>
-            <name>Тимофей</name>
-            <email>timofiy.bilyi@gmail.com</email>
-        </developer>
-        <developer>
-            <name>Гавриленко Олександр</name>
-            <email>gavrylenko.aleksandr@gmail.com</email>
-        </developer>
-        <developer>
-            <name>Целуйко Игорь Валентинович</name>
-            <email>igor7311@gmail.com</email>
-        </developer>
-        <developer>
-            <name>Євген Лазарев</name>
-            <email>lazarev4@ukr.net</email>
-        </developer>
-        <developer>
-            <name>Ольга Коструб</name>
-            <email>lolga_luga@mail.ru</email>
-        </developer>
-        <developer>
-            <name>Лесничий Сергей Владимирович</name>
-            <email>ljore@ukr.net</email>
-        </developer>
-    </developers>
-    
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>ua.com.itinterview</groupId>
+	<artifactId>it-interview</artifactId>
+	<packaging>war</packaging>
+	<version>1.0-SNAPSHOT</version>
+	<name>interview.com.ua website</name>
+	<url>http://interview.com.ua/</url>
+	<inceptionYear>2013</inceptionYear>
+	<issueManagement>
+		<url>https://github.com/interview-com-ua/website/issues</url>
+	</issueManagement>
+	<scm>
+		<connection>https://github.com/interview-com-ua/website.git</connection>
+		<developerConnection>https://github.com/interview-com-ua/website.git</developerConnection>
+		<url>https://github.com/interview-com-ua/website</url>
+	</scm>
+	<developers>
+		<developer>
+			<name>Чирков Владимир Валериевич</name>
+			<email>voch83@mail.ru</email>
+		</developer>
+		<developer>
+			<name>Прутян Владимир Владимирович</name>
+			<email>vladprut@bigmir.net</email>
+		</developer>
+		<developer>
+			<name>Новокшонов Евгений Анатольевич</name>
+			<email>dzmk@i.ua</email>
+		</developer>
+		<developer>
+			<name>Novokshonov Oleksii</name>
+			<email>oleksii.novokshonov@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Мосолов Артем Юрійович</name>
+			<email>kle0n@mail.ru</email>
+		</developer>
+		<developer>
+			<name>Педич Максим Михайлович</name>
+			<email>maximpedich@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Романiв Андрій Володимирович</name>
+			<email>twentyyears@i.ua</email>
+		</developer>
+		<developer>
+			<name>Вольский Дмитрий Дмитриевич</name>
+			<email>skiman@i.ua</email>
+		</developer>
+		<developer>
+			<name>Бутолин Дмитрий Геннадьевич</name>
+			<email>djemen@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Andrey Stasyuk</name>
+			<email>shmishleniy@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Морозов Пётр Владимирович</name>
+			<email>petia.morozov@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Тимофей</name>
+			<email>timofiy.bilyi@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Гавриленко Олександр</name>
+			<email>gavrylenko.aleksandr@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Целуйко Игорь Валентинович</name>
+			<email>igor7311@gmail.com</email>
+		</developer>
+		<developer>
+			<name>Євген Лазарев</name>
+			<email>lazarev4@ukr.net</email>
+		</developer>
+		<developer>
+			<name>Ольга Коструб</name>
+			<email>lolga_luga@mail.ru</email>
+		</developer>
+		<developer>
+			<name>Лесничий Сергей Владимирович</name>
+			<email>ljore@ukr.net</email>
+		</developer>
+	</developers>
+
 	<dependencies>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -152,20 +152,20 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-web</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
@@ -206,15 +206,20 @@
 			<version>1.0.1</version>
 		</dependency>
 		<dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-server</artifactId>
-            <version>2.28.0</version>
-        </dependency>
-       <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>2.28.0</version>
-        </dependency>	
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-server</artifactId>
+			<version>2.28.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>2.28.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.12</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
