#35: Added logout after test finished

--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,7 +1,7 @@
-database.driverClassName=org.postgresql.Driver
-database.url=jdbc:postgresql://127.0.0.1:5432/website
-database.dialect=postgresql
-database.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-database.userName=postgres
-database.password=493271
+database.driverClassName=org.hsqldb.jdbcDriver
+database.url=jdbc:hsqldb:file:target/website/it-interview;shutdown=true;sql.syntax_pgs=true
+database.dialect=hsqldb
+database.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+database.userName=sa
+database.password=
 database.schemaNames=PUBLIC
