--- a/web/src/test/resources/persistence.properties
+++ b/web/src/test/resources/persistence.properties
@@ -1,5 +1,5 @@
 database.driverClassName=org.hsqldb.jdbcDriver
-database.url=jdbc:hsqldb:file:target/website/it-interview;shutdown=true;sql.syntax_pgs=true
+database.url=jdbc:hsqldb:file:../db/it-interview;shutdown=true;sql.syntax_pgs=true
 database.dialect=hsqldb
 database.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 database.userName=sa
