--- a/web-tests/pom.xml
+++ b/web-tests/pom.xml
@@ -181,6 +181,8 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <configuration>
                     <war>${basedir}/../web/target/ROOT.war</war>
+                    <stopKey>foo</stopKey>
+                    <stopPort>9999</stopPort>
                 </configuration>
                 <executions>
                     <execution>
