--- a/web/pom.xml
+++ b/web/pom.xml
@@ -190,11 +190,16 @@
             <version>${selenium.version}</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.dbunit</groupId>
+            <artifactId>dbunit</artifactId>
+            <version>2.4.9</version>
         </dependency>
     </dependencies>
 
