--- a/web/pom.xml
+++ b/web/pom.xml
@@ -365,11 +365,22 @@
                     <path>/</path>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                <configuration>
+                    <includes>
+                        <include>**/*.java</include>
+                    </includes>
+                    <argLine>-XX:MaxPermSize=256m -XX:PermSize=256m</argLine>
+                </configuration>
+            </plugin>
         </plugins>
 
         <testResources>
             <testResource>
-                <directory>src/test/resources</directory>
+                <directory>src/selenium/resources</directory>
                 <filtering>true</filtering>
                 <includes>
                     <include>**.xml</include>
@@ -377,7 +388,7 @@
                 </includes>
             </testResource>
             <testResource>
-                <directory>src/selenium/resources</directory>
+                <directory>src/test/resources</directory>
                 <filtering>true</filtering>
                 <includes>
                     <include>**.xml</include>
